Added prompting and sampling method

--- a/initial_cost_comparison.ipynb
+++ b/initial_cost_comparison.ipynb
@@ -110,6 +110,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Eventually done by claude"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
